--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-﻿Hello, world
+﻿<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Hello, world</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <div class="container">
+      <div class="item">Item 1</div>
+      <div class="item">Item 2</div>
+      <div class="item">Item 3</div>
+    </div>
+  </body>
+
+  <style>
+    .container {
+      display: grid;
+      grid-template-columns: 1fr;
+      align-content: flex-start;
+      gap: 16px;
+      padding: 16px;
+    }
+
+    .item {
+      padding: 88px 16px;
+    }
+    @media (min-width: 992px) {
+      .container {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+    }
+  </style>
+</html>
