--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="item">Item 1</div>
+      <div class="item">Item 1 site.js</div>
       <div class="item">Item 2</div>
       <div class="item">Item 3</div>
     </div>
